:bug: home > fix blur on safari

--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -26,12 +26,12 @@
         height: 88%;
         width: 90%;
         backdrop-filter: blur(3px);
+        -webkit-backdrop-filter: blur(3px);
         z-index: 8;
     }
     
     &__background {
         opacity: .4;
-        background-color: tomato;
     }
 
     &__project {
